saint-lascivious.github.io: big changes for small changes
 - yet more preloads
 - expand previous experiment to all
 - introduce enlift
   fun visual effect that plays with elevation on certain surfaces
   fires on hover/active states
 - better footer social icon shadows
   gradient shadow taking cues from mdl's box-shadow element
 - rename load-fonts to load_fonts
   slightly more consistent
 - bump pwa cache version to freshen cache

saint's musings:
 - we broke the mythical 100% performance rating on gtmetrix audit
   TTFB -> DOM fully loaded/fully rendered; ~550ms
   TTFB -> interactive; ~600ms
 - i recall being happy rendering just the index in under 2.4s
   now i'm fighting for tens to ones of milliconds

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/pwapp-serviceworker.min.js
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   pwapp-serviceworker.min.js
 - modified:   reportaproblem.html
 - renamed:    resources/javascript/.formatted/load-fonts.min.js -> resources/javascript/.formatted/load_fonts.min.js
 - renamed:    resources/javascript/load-fonts.min.js -> resources/javascript/load_fonts.min.js
 - modif

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -32,11 +32,14 @@
     <link rel="canonical" href="https://sainternet.xyz/404.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp" fetchpriority="high">
+    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp" media="(prefers-color-scheme: light)" fetchpriority="high">
+    <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)" fetchpriority="high">
 
+    <link rel="preload" as="script" href="resources/javascript/headers.min.js">
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <link rel="dns-prefetch" href="www.googletagmanager.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
     <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
 
     <link rel="preload" as="style" href="resources/stylesheets/material.cyan-red.min.css">
@@ -57,12 +60,12 @@
     <link rel="dns-prefetch" href="fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2" type="font/woff2">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmEU9fBBc4.woff2" type="font/woff2">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" type="font/woff2">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmYUtfBBc4.woff2" type="font/woff2">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1Mu51xIIzI.woff2" type="font/woff2">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/materialicons/v139/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmEU9fBBc4.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmYUtfBBc4.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1Mu51xIIzI.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/materialicons/v139/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" type="font/woff2" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
@@ -74,11 +77,13 @@
     <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
 
-    <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp" fetchpriority="high">
-
+    <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/sainternet.min.js">
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
+    <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
+    <link rel="preload" as="script" href="pwapp.min.js">
     <script type="text/javascript" src="pwapp.min.js" defer></script>
 
     <link rel="prefetch" href="265.html" as="document">
@@ -106,7 +111,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp">
+      <header class="mdl-layout__header mdl-shadow--4dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -134,7 +139,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="pokedexoverdns.html">Pokédex over DNS</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
@@ -142,7 +147,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="pokemon404">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
             <a href="pokedexoverdns.html#pokedexoverdns" class="subterfuge">
               <picture class="light-mode-img">
@@ -168,7 +173,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="example">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
             <p>
               Example Pokédex over DNS queries using <a href="https://linux.die.net/man/1/dig">dig</a>:
@@ -234,6 +239,6 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
   </body>
 </html>
