--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -32,9 +32,11 @@
     <link rel="canonical" href="https://sainternet.xyz/technologies.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
+    <link rel="preload" as="script" href="resources/javascript/headers.min.js">
     <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <link rel="dns-prefetch" href="www.googletagmanager.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
     <script type="text/javascript" src="resources/javascript/tag_manager.min.js" async></script>
 
     <link rel="preload" as="style" href="resources/stylesheets/material.teal-red.min.css">
@@ -95,7 +97,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp">
+      <header class="mdl-layout__header mdl-shadow--4dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -128,7 +130,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#technologies"><b>Technologies</b></a><br><a class="embiggen" href="#dnsdist">dnsdist</a>, <a class="embiggen" href="#dnsproxy">dnsproxy</a>, <a class="embiggen" href="#piholeftl">pihole-FTL</a>, <a class="embiggen" href="#unbound">unbound</a>
             </div>
@@ -136,7 +138,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="technologies">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Technologies</span></h3>
             <p>
               Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
@@ -145,7 +147,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="dnsdist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">dnsdist</span></h3>
             <p>
               <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
@@ -157,7 +159,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="dnsproxy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">dnsproxy</span></h3>
             <p>
               <a href="https://github.com/AdguardTeam/dnsproxy">dnsproxy</a>
@@ -169,7 +171,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="piholeftl">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">pihole-FTL</span></h3>
             <p>
               <a href="https://github.com/pi-hole/FTL">pihole-FTL</a>
@@ -181,7 +183,7 @@
         </div>
         <div class="sainternet-container mdl-grid" id="unbound">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">unbound</span></h3>
             <p>
               <a href="https://github.com/NLnetLabs/unbound">unbound</a>
@@ -238,6 +240,6 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
   </body>
 </html>
