saint-lascivious.github.io: remove headers.js, silence console.*
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/pwapp-serviceworker.min.js
 - modified:   .formatted/pwapp.min.js
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   pwapp-serviceworker.min.js
 - modified:   pwapp.min.js
 - modified:   reportaproblem.html
 - deleted:    resources/javascript/.formatted/headers.min.js
 - modified:   resources/javascript/.formatted/load_fonts.min.js
 - modified:   resources/javascript/.formatted/random_phrase.min.js
 - modified:   resources/javascript/.formatted/sainternet.min.js
 - modified:   resources/javascript/.formatted/tag_manager.min.js
 - deleted:    resources/javascript/headers.min.js
 - modified:   resources/javascript/random_phrase.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -8,6 +8,7 @@
   <head>
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
@@ -35,8 +36,6 @@
     <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)" fetchpriority="high">
     <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)" fetchpriority="high">
 
-    <link rel="preload" as="script" href="resources/javascript/headers.min.js">
-    <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <link rel="dns-prefetch" href="www.googletagmanager.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
