--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -8,6 +8,7 @@
   <head>
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
@@ -35,8 +36,6 @@
     <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)" fetchpriority="high">
     <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)" fetchpriority="high">
 
-    <link rel="preload" as="script" href="resources/javascript/headers.min.js">
-    <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <link rel="dns-prefetch" href="www.googletagmanager.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preload" as="script" href="resources/javascript/tag_manager.min.js">
