saint-lascivious.github.io: rename/reshuffle js
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - renamed:    .formatted/pwapp.min.js -> .formatted/sainternet.min.js
 - renamed:    .formatted/pwapp-serviceworker.min.js -> .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - deleted:    pwapp-serviceworker.min.js
 - deleted:    pwapp.min.js
 - modified:   reportaproblem.html
 - renamed:    resources/javascript/.formatted/sainternet.min.js -> resources/javascript/.formatted/toggle_drawer.min.js
 - deleted:    resources/javascript/sainternet.min.js
 - new file:   resources/javascript/toggle_drawer.min.js
 - new file:   sainternet.min.js
 - new file:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -78,12 +78,12 @@
 
     <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
-    <link rel="preload" as="script" href="resources/javascript/sainternet.min.js">
-    <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
-    <link rel="preload" as="script" href="pwapp.min.js">
-    <script type="text/javascript" src="pwapp.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
+    <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
+    <link rel="preload" as="script" href="sainternet.min.js">
+    <script type="text/javascript" src="sainternet.min.js" defer></script>
 
     <link rel="prefetch" href="265.html" as="document">
     <link rel="prerender" href="265.html">
