--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -69,10 +69,14 @@
     <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/brands-stripped.min.css">
 
+    <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
-    <script type="text/javascript" src="pwapp.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
+    <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
+    <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
+    <link rel="preload" as="script" href="sainternet.min.js">
+    <script type="text/javascript" src="sainternet.min.js" defer></script>
 
     <link rel="prefetch" href="index.html" as="document">
     <link rel="prerender" href="index.html">
