saint-lascivious.github.io: introduce debug.js
 - sessionStorage DEBUG
   (default false)
 - toggleDebugFlag
   (not used, yet)
 - logDebugMessage
   (initial basic console.* wrapper function)
 - include, but don't (yet) use in service worker

 - also
   strip a bunch of cruft from cache

expected change right now is, no change

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/sainternet.min.js
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - new file:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/.formatted/load_fonts.min.js
 - modified:   resources/javascript/.formatted/random_phrase.min.js
 - modified:   resources/javascript/.formatted/toggle_drawer.min.js
 - new file:   resources/javascript/debug.min.js
 - modified:   resources/javascript/load_fonts.min.js
 - modified:   resources/javascript/random_phrase.min.js
 - modified:   resources/javascript/toggle_drawer.min.js
 - modified:   sainternet.min.js
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -74,6 +74,8 @@
 
     <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/debug.min.js">
+    <script type="text/javascript" src="resources/javascript/debug.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/random_phrase.min.js">
