saint-lascivious.github.io: switch to local storage
 - first...ish step in bring optional logging to serviceworker

 - also
   trim cache down yet further still

Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   .formatted/sainternet.min.js
 - modified:   .formatted/serviceworker.min.js
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   sainternet.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -142,7 +142,7 @@
             <h3><span class="embiggen">Debug</span></h3>
             <span id="tooltip-debug">
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" onclick="toggleDebugFlag()">
-                Debug Logging
+                Console Logging
               </button>
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-debug">
