--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -93,6 +93,8 @@
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
     <link rel="prerender" href="projects.html">
+    <link rel="prefetch" href="debug.html" as="document">
+    <link rel="prerender" href="debug.html">
 
     <link rel="manifest" href="sainternet.webmanifest">
 
