saint-lascivious.github.io: indexdb debug test
Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -147,7 +147,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Console Logging</span></h3>
             <span id="tooltip-console">
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect enlift" onclick="toggleDebugFlag()">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="toggleDebugFlag()">
                 Console Logging
               </button>
             </span>
